...
        android:fontFamily="sans-serif-black"
        android:paddingLeft="10dp"
        android:text="Log Exercise"
        android:textColor="#0B0A0A"
        android:textSize="45sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <EditText
        android:id="@+id/editTextExercise"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/exercise"
        android:importantForAutofill="no"
        android:inputType="text"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/editTextUnits"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/units"
        android:importantForAutofill="no"
        android:inputType="text"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/editTextNumberOfUnits"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="text"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/log_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="@string/log_exercise"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/to_home_from_log_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#56ADFA"
        android:text="@string/back_to_home"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
...
